adding HEHlow-IN

--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "Fabgram",
-    "slug": "Fabgram",
+    "name": "HEHlow-IN",
+    "slug": "HEHlow-IN",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -20,7 +20,7 @@
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon.png"
     }
   }
 }
